apache-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
      - name: apache
        image: matbilodeau/apachetest:latest
        ports:
        - containerPort : 80
