apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache2
  ports:
    - protocol: TCP
      port: 80
